--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,13 +13,20 @@
 </head>
 <body>
     <div class="background-animation"></div>
+    <div class="floating-elements">
+        <div class="floating-element"></div>
+        <div class="floating-element"></div>
+        <div class="floating-element"></div>
+        <div class="floating-element"></div>
+        <div class="floating-element"></div>
+    </div>
     <div class="app-container">
         <header class="app-header">
             <div class="logo">
                 <h1 class="title">AetherCode</h1>
             </div>
             <div class="animated-phrase">
-                <span class="phrase">Intelligent Code Refinement</span>
+                <span class="phrase">Your architect for effortless coding...</span>
             </div>
         </header>
         
