--- a/templates/index.html
+++ b/templates/index.html
@@ -69,19 +69,19 @@
             <!-- Right panel: Minutes & To-Dos -->
             <div class="panel right-panel">
                 <div class="panel-header">
-                    <h3><i class="fas fa-clipboard-list"></i> Minutes & To-Dos</h3>
+                    <h3><i class="fas fa-clipboard-list"></i> Discussion Points & Action Items</h3>
                 </div>
                 <div class="minutes-container" id="minutes-container">
                     <!-- Live minutes will appear here -->
-                    <h4>Meeting Minutes</h4>
+                    <h4>Discussion Points</h4>
                     <div id="live-minutes">
-                        <p class="minutes-placeholder">Minutes will appear as you chat with the AI...</p>
+                        <p class="minutes-placeholder">Discussion points will appear as you chat with the AI...</p>
                     </div>
                 </div>
                 <div class="todos-container">
-                    <h4>To-Do Items</h4>
+                    <h4>Action Items</h4>
                     <ul id="todo-list">
-                        <li class="todo-placeholder">To-Do items will be added here...</li>
+                        <li class="todo-placeholder">Action items will be added here...</li>
                     </ul>
                 </div>
             </div>
